--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
         </div>  
     </main>
     
-    <script src="./login.ts"></script>
+    <script src="./login.js"></script>
 </body>
 </html>
